fix(style): fixed family page heading color and spacing
Fixed spacing and color in banner after removing the hxHeading1 class

--- a/assets/css/_sass/website/_family-page.scss
+++ b/assets/css/_sass/website/_family-page.scss
@@ -2,7 +2,7 @@
 .fam-banner {
   background-color: $cyan700;
   min-height: 10.5rem;
-  .hxHeading-1 {
+  h1 {
     margin-top: 5rem;
     color: $textcolorlight !important;
   }
